делаю контрольную точку, если все сламаю верну

--- a/src/main/resources/templates/blocks/menuRightAdmin.html
+++ b/src/main/resources/templates/blocks/menuRightAdmin.html
@@ -2,7 +2,7 @@
   <div class="position-sticky pt-3 sidebar-sticky">
     <ul class="nav flex-column">
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="/admin/hero">
+        <a class="nav-link active" aria-current="page" href="/admin/add/hero">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                stroke-linejoin="round" class="feather feather-home align-text-bottom"
@@ -14,7 +14,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/admin/skill">
+        <a class="nav-link" href="/admin/add/skill">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                stroke-linejoin="round" class="feather feather-file align-text-bottom"
@@ -26,7 +26,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/admin/items">
+        <a class="nav-link" href="/admin/add/items">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                stroke-linejoin="round" class="feather feather-shopping-cart align-text-bottom"
@@ -39,7 +39,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/admin/ras">
+        <a class="nav-link" href="/admin/add/ras">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                stroke-linejoin="round" class="feather feather-users align-text-bottom"
@@ -53,7 +53,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/admin/class/add">
+        <a class="nav-link" href="/admin/add/class">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                stroke-linejoin="round" class="feather feather-bar-chart-2 align-text-bottom"
@@ -82,7 +82,7 @@
     </h6>
     <ul class="nav flex-column mb-2">
       <li class="nav-item">
-        <a class="nav-link" href="/admin/hero/edit">
+        <a class="nav-link" href="/admin/display/hero">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                stroke-linejoin="round" class="feather feather-file-text align-text-bottom"
@@ -97,7 +97,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/admin/skill/edit">
+        <a class="nav-link" href="/admin/display/skill">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                stroke-linejoin="round" class="feather feather-file-text align-text-bottom"
@@ -112,7 +112,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/admin/items/edit">
+        <a class="nav-link" href="/admin/display/items">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                stroke-linejoin="round" class="feather feather-file-text align-text-bottom"
@@ -127,7 +127,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/admin/ras/edit">
+        <a class="nav-link" href="/admin/display/ras">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                stroke-linejoin="round" class="feather feather-file-text align-text-bottom"
@@ -142,7 +142,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/admin/class/edit">
+        <a class="nav-link" href="/admin/display/class">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                stroke-linejoin="round" class="feather feather-file-text align-text-bottom"
