--- a/src/main/resources/templates/menu/button1/autoChess.html
+++ b/src/main/resources/templates/menu/button1/autoChess.html
@@ -20,19 +20,19 @@
                             <p class="h2">Dota&nbsp;2 Auto Chess</p>
                 
                             <ul  class="nav justify-content-center">
-                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/hero"><h3><i class="fa-solid fa-chess-pawn"></i>Герои<sup class="featured-article__tag__count">107</sup></h3></a></span>
-                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/weapon"><h3>Предметы<sup class="featured-article__tag__count">94</sup></h3></a></span>
+                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/display/hero"><h3><i class="fa-solid fa-chess-pawn"></i>Герои<sup class="featured-article__tag__count">107</sup></h3></a></span>
+                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/display/weapon"><h3>Предметы<sup class="featured-article__tag__count">94</sup></h3></a></span>
                             </ul>
                             <ul  class="nav justify-content-center">
-                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/ras"><h3>Расы<sup class="featured-article__tag__count">17</sup></h3></a></span>
-                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/class"><h3>Классы<sup class="featured-article__tag__count">17</sup></h3></a></span>
+                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/display/ras"><h3>Расы<sup class="featured-article__tag__count">17</sup></h3></a></span>
+                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/display/class"><h3>Классы<sup class="featured-article__tag__count">17</sup></h3></a></span>
                             </ul>
                             <ul  class="nav justify-content-center">
-                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/path"><h3>Патчи</h3></a></span>
-                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/start/basic-rules"><h3>Механики игры</h3></a></span>
+                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/display/path"><h3>Патчи</h3></a></span>
+                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/start/display/basic-rules"><h3>Механики игры</h3></a></span>
                             </ul>
                             <ul  class="nav justify-content-center">
-                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/skill"><h3>Абилки</h3></a></span>
+                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/display/skill"><h3>Абилки</h3></a></span>
 
                             </ul>
                 
