--- a/src/main/resources/templates/blocks/menuTop.html
+++ b/src/main/resources/templates/blocks/menuTop.html
@@ -8,17 +8,17 @@
     <div class="btn-group" >
         <button type="button" id="autoches" class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">База знаний</button>
         <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="/home/hero">Герои</a></li>
-            <li><a class="dropdown-item" href="/home/weapon">Предметы</a></li>
-            <li><a class="dropdown-item" href="/home/skill">Скилы</a></li>
+            <li><a class="dropdown-item" href="/home/display/hero">Герои</a></li>
+            <li><a class="dropdown-item" href="/home/display/items">Предметы</a></li>
+            <li><a class="dropdown-item" href="/home/display/skill">Скилы</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="/home/gaid">Гайды</a></li>
+            <li><a class="dropdown-item" href="/home/display/gaid">Гайды</a></li>
         </ul>
     </div>
     <div class="btn-group" >
         <button type="button" id="autoches" class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Правилы игры</button>
         <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="/home/whatgame">Механика игры</a></li>
+            <li><a class="dropdown-item" href="/home/display/whatgame">Механика игры</a></li>
             
         </ul>
     </div>
@@ -26,18 +26,18 @@
     <div class="btn-group">
         <button type="button" id="autoches" class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Новости</button>
         <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="/home/path">Патч Игры</a></li>
-            <li><a class="dropdown-item" href="/home/updateweb">Обновление сайта</a></li>
+            <li><a class="dropdown-item" href="/home/display/path">Патч Игры</a></li>
+            <li><a class="dropdown-item" href="/home/display/updateweb">Обновление сайта</a></li>
         </ul>
     </div>
 
     <div class="btn-group">
         <button type="button" id="autoches" class="btn btn-dark dropdown-toggle " data-bs-toggle="dropdown" aria-expanded="false">Расы и класы</button>
         <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="/home/ras">Расы</a></li>
-            <li><a class="dropdown-item" href="/home/classhero">Классы</a></li>
+            <li><a class="dropdown-item" href="/home/display/ras">Расы</a></li>
+            <li><a class="dropdown-item" href="/home/display/class">Классы</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="/home/synergy">Синергии</a></li>
+            <li><a class="dropdown-item" href="/home/display/synergy">Синергии</a></li>
         </ul>
 
     </div>
