--- a/src/main/resources/templates/menu/button2/admin/hero/heroDetals.html
+++ b/src/main/resources/templates/menu/button2/admin/hero/heroDetals.html
@@ -43,13 +43,13 @@
                                 <img th:src="'/images/hero/' + ${hero.iconClassHero1}" height="20px" width="20px">
 
 
-                                <img th:src="'/images/hero' + ${hero1.iconClassHero2}" alt="" height="20px" width="20px"
+                                <img th:src="'/images/hero/' + ${hero.iconClassHero2}" alt="" height="20px" width="20px"
                                      onerror="this.style.visibility = 'hidden'"></td>
 
-                            <td><t th:text="hero.hero.full_text"></t></td>
-                            <td><t th:text="hero.hero.dateTime"></t></td>
+                            <td><t th:text="${hero.hero.full_text}"></t></td>
+                            <td><t th:text="${hero.hero.dateTime}"></t></td>
 
-                            <td><a th:href="'/admin/edit/' +${hero.hero.id}" class="link-secondary"> Изменить
+                            <td><a th:href="'/admin/edit/hero/' +${hero.hero.id}" class="link-secondary"> Изменить
                             </a></td>
 
                         </tr>
