--- a/src/main/resources/templates/menu/button2/admin/hero/heroDisplay.html
+++ b/src/main/resources/templates/menu/button2/admin/hero/heroDisplay.html
@@ -32,7 +32,7 @@
 
                             <td><img th:src="'/images/hero/' + ${hero1.iconHero}"></td>
 
-                            <td><a th:href="'/admin/detals/' +${hero1.hero.id}"  class="link-secondary">
+                            <td><a th:href="'/admin/detals/hero/' +${hero1.hero.id}"  class="link-secondary">
                                 <t th:text="${hero1.hero.nameHero}"></t>
                             </a></td>
 
@@ -67,7 +67,7 @@
 
                             <td><img th:src="'/images/hero/' + ${hero1.iconHero}"></td>
 
-                            <td><a th:href="'/admin/detals' +${hero1.hero.id}"  class="link-secondary">
+                            <td><a th:href="'/admin/detals/hero/' +${hero1.hero.id}"  class="link-secondary">
                                 <t th:text="${hero1.hero.nameHero}"></t>
                             </a></td>
 
@@ -103,7 +103,7 @@
 
                             <td><img th:src="'/images/hero/' + ${hero1.iconHero}"></td>
 
-                            <td><a th:href="'/admin/detals' +${hero1.hero.id}"  class="link-secondary">
+                            <td><a th:href="'/admin/detals/hero/' +${hero1.hero.id}"  class="link-secondary">
                                 <t th:text="${hero1.hero.nameHero}"></t>
                             </a></td>
 
@@ -140,7 +140,7 @@
 
                             <td><img th:src="'/images/hero/' + ${hero1.iconHero}"></td>
 
-                            <td><a th:href="'/admin/detals' +${hero1.hero.id}"  class="link-secondary">
+                            <td><a th:href="'/admin/detals/hero/' +${hero1.hero.id}"  class="link-secondary">
                                 <t th:text="${hero1.hero.nameHero}"></t>
                             </a></td>
 
@@ -175,7 +175,7 @@
 
                             <td><img th:src="'/images/hero/' + ${hero1.iconHero}"></td>
 
-                            <td><a th:href="'/admin/detals' +${hero1.hero.id}"  class="link-secondary">
+                            <td><a th:href="'/admin/detals/hero/' +${hero1.hero.id}"  class="link-secondary">
                                 <t th:text="${hero1.hero.nameHero}"></t>
                             </a></td>
 
@@ -211,7 +211,7 @@
 
                             <td><img th:src="'/images/hero/' + ${hero1.iconHero}"></td>
 
-                            <td><a th:href="'/admin/detals' +${hero1.hero.id}"  class="link-secondary">
+                            <td><a th:href="'/admin/detals/hero/' +${hero1.hero.id}"  class="link-secondary">
                                 <t th:text="${hero1.hero.nameHero}"></t>
                             </a></td>
 
