--- a/src/main/resources/templates/menu/button2/admin/hero/heroEdit.html
+++ b/src/main/resources/templates/menu/button2/admin/hero/heroEdit.html
@@ -13,9 +13,9 @@
 
 
 
-        <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4" th:each="hero : ${editHero}">
+        <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4" th:each="hero : ${detals}">
             <h1>Обнавление Героя</h1>
-            <form th:action="@{'/admin/hero/' + ${hero.hero.id}} " method="post" enctype="multipart/form-data">
+            <form th:action="@{'/admin/edit/hero/' + ${hero.hero.id}} " method="post" enctype="multipart/form-data">
                 <p>вставте икону героя
                     <input type="file" name="iconHero" th:value="${hero.iconHero}">
                 </p>
@@ -33,7 +33,7 @@
                 <p>вставте икону класса
                     <input   type="file" name="iconClassHero2" placeholder="вставте икону расы">
                 </p>
-                <textarea name="full_text" placeholder="Ведите полное описание героя" class="form-control"></textarea><br>
+                <textarea th:value="${hero.hero.full_text}" name="full_text" placeholder="Ведите полное описание героя" class="form-control"></textarea><br>
 
                 <button type="submit" class="btn btn-success">Обновить</button>
                 <a th:href="@{'/admin/delete/hero/' + ${hero.hero.id}}" class="btn btn-success">Удалить</a>
