--- a/src/main/resources/templates/menu/button2/user/classHero/classDetals.html
+++ b/src/main/resources/templates/menu/button2/user/classHero/classDetals.html
@@ -11,17 +11,17 @@
 
 <div class="container-fluid" id="t">
   <div class="row">
-    <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse"
-         th:insert="blocks/menuRightAdmin ::div"></nav>
+    <div id="blokc">
+      <div class="top" th:insert="blocks/menuTop :: div"></div>
 
-    <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+
       <div class="border border-dark" id="pading">
 
         <div class="inline-block-table">
           <table class="table table-borderless">
             <thead>
             <tr>
-              <th colspan="3">Абилка
+              <th colspan="3">Расса
               </th>
             </tr>
             </thead>
@@ -48,8 +48,10 @@
 
 
       </div>
-    </main>
+
+
   </div>
+
   <footer th:insert="blocks/headerFooter/footer :: footer"></footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
           integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
