--- a/src/main/resources/templates/menu/button2/user/classHero/classDisplay.html
+++ b/src/main/resources/templates/menu/button2/user/classHero/classDisplay.html
@@ -10,11 +10,11 @@
 <header th:insert="blocks/headerFooter/header :: header"></header>
 
 <div class="container-fluid" id="t">
-  <div class="row">
-    <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse"
-         th:insert="blocks/menuRightAdmin ::div"></nav>
 
-    <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+  <div id="blokc">
+    <div class="top" th:insert="blocks/menuTop :: div"></div>
+
+
       <div class="border border-dark" id="pading">
 
         <div class="inline-block-table">
@@ -32,7 +32,7 @@
 
               <td><img th:src="'/images/class/' + ${classHero.id}"></td>
 
-              <td><a th:href="'/home/class' +${classHero.id}"  class="link-secondary">
+              <td><a th:href="'/home/detals/class/' +${classHero.id}"  class="link-secondary">
                 <t th:text="${classHero.name}"></t>
               </a></td>
 
@@ -48,7 +48,7 @@
 
 
       </div>
-    </main>
+
   </div>
   <footer th:insert="blocks/headerFooter/footer :: footer"></footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
