--- a/src/main/resources/templates/menu/button2/user/hero/heroDetals.html
+++ b/src/main/resources/templates/menu/button2/user/hero/heroDetals.html
@@ -11,13 +11,9 @@
 
 <div class="container-fluid" id="t">
     <div class="row">
-        <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse"
-             th:insert="blocks/menuRightAdmin ::div"></nav>
 
-        <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-            <div class="border border-dark" id="pading">
-
-                <div class="inline-block-table">
+            <div id="blokc">
+                <div class="top" th:insert="blocks/menuTop :: div"></div>
                     <table class="table table-borderless">
                         <thead>
                         <tr>
@@ -43,14 +39,12 @@
                                 <img th:src="'/images/hero/' + ${hero.iconClassHero1}" height="20px" width="20px">
 
 
-                                <img th:src="'/images/hero' + ${hero1.iconClassHero2}" alt="" height="20px" width="20px"
+                                <img th:src="'/images/hero/' + ${hero.iconClassHero2}" alt="" height="20px" width="20px"
                                      onerror="this.style.visibility = 'hidden'"></td>
 
-                            <td><t th:text="hero.hero.full_text"></t></td>
-                            <td><t th:text="hero.hero.dateTime"></t></td>
+                            <td><t th:text="${hero.hero.full_text}"></t></td>
+                            <td><t th:text="${hero.hero.dateTime}"></t></td>
 
-                            <td><a th:href="'/admin/edit/' +${hero.hero.id}" class="link-secondary"> Изменить
-                            </a></td>
 
                         </tr>
 
@@ -59,7 +53,7 @@
                     </table>
                 </div>
             </div>
-        </main>
+
     </div>
     <footer th:insert="blocks/headerFooter/footer :: footer"></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
