--- a/src/main/resources/templates/menu/button2/user/hero/heroDisplay.html
+++ b/src/main/resources/templates/menu/button2/user/hero/heroDisplay.html
@@ -8,14 +8,12 @@
 
 <body>
 <header th:insert="blocks/headerFooter/header :: header"></header>
+<div class="border border-dark" id="pading">
 
-<div class="container-fluid" id="t">
-    <div class="row">
-        <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse"
-             th:insert="blocks/menuRightAdmin ::div"></nav>
+    <div class="container-fluid" id="t">
 
-        <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-            <div class="border border-dark" id="pading">
+            <div id="blokc">
+                <div class="top" th:insert="blocks/menuTop :: div"></div>
 
                 <div class="inline-block-table">
                     <table class="table table-borderless">
@@ -31,7 +29,7 @@
 
 
                             <td><img th:src="'/images/' + ${hero1.iconHero}"></td>
-                            <td><a th:href="'/admin/' +${hero1.hero.id}"  class="link-secondary">
+                            <td><a th:href="'/home/hero/' +${hero1.hero.id}" class="link-secondary">
                                 <t th:text="${hero1.hero.nameHero}"></t>
                             </a></td>
 
@@ -51,6 +49,7 @@
                         </tbody>
                     </table>
                 </div>
+
                 <div class="inline-block-table">
                     <table class="table table-borderless">
                         <thead>
@@ -66,7 +65,7 @@
 
                             <td><img th:src="'/images/' + ${hero1.iconHero}"></td>
 
-                            <td><a th:href="'/admin/' +${hero1.hero.id}"  class="link-secondary">
+                            <td><a th:href="'/home/hero/' +${hero1.hero.id}" class="link-secondary">
                                 <t th:text="${hero1.hero.nameHero}"></t>
                             </a></td>
 
@@ -101,7 +100,7 @@
 
 
                             <td><img th:src="'/images/' + ${hero1.iconHero}"></td>
-                            <td><a th:href="'/admin/' +${hero1.hero.id}"  class="link-secondary">
+                            <td><a th:href="'/home/hero/' +${hero1.hero.id}" class="link-secondary">
                                 <t th:text="${hero1.hero.nameHero}"></t>
                             </a></td>
 
@@ -137,7 +136,7 @@
 
 
                             <td><img th:src="'/images/' + ${hero1.iconHero}"></td>
-                            <td><a th:href="'/admin/' +${hero1.hero.id}"  class="link-secondary">
+                            <td><a th:href="'/home/hero/' +${hero1.hero.id}" class="link-secondary">
                                 <t th:text="${hero1.hero.nameHero}"></t>
                             </a></td>
 
@@ -171,7 +170,7 @@
 
 
                             <td><img th:src="'/images/' + ${hero1.iconHero}"></td>
-                            <td><a th:href="'/admin/' +${hero1.hero.id}"  class="link-secondary">
+                            <td><a th:href="'/home/hero/' +${hero1.hero.id}" class="link-secondary">
                                 <t th:text="${hero1.hero.nameHero}"></t>
                             </a></td>
 
@@ -195,12 +194,13 @@
 
 
             </div>
-        </main>
+
     </div>
-    <footer th:insert="blocks/headerFooter/footer :: footer"></footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"></script>
+</div>
+<footer th:insert="blocks/headerFooter/footer :: footer"></footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </div>
 
 </body>
