--- a/src/main/resources/templates/menu/button2/admin/classHero/classAdd.html
+++ b/src/main/resources/templates/menu/button2/admin/classHero/classAdd.html
@@ -14,7 +14,7 @@
 
         <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
             <h1>Добавление класса</h1>
-            <form th:action="@{/admin/class/add}" method="post" enctype="multipart/form-data">
+            <form th:action="@{/admin/add/class}" method="post" enctype="multipart/form-data">
                 <p>вставте икону класса
                 <input type="file" name="iconClassHero">
                 </p>
