--- a/src/main/resources/templates/menu/button1/autoChess.html
+++ b/src/main/resources/templates/menu/button1/autoChess.html
@@ -20,12 +20,12 @@
                             <p class="h2">Dota&nbsp;2 Auto Chess</p>
                 
                             <ul  class="nav justify-content-center">
-                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/display/hero"><h3><i class="fa-solid fa-chess-pawn"></i>Герои<sup class="featured-article__tag__count">107</sup></h3></a></span>
-                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/display/weapon"><h3>Предметы<sup class="featured-article__tag__count">94</sup></h3></a></span>
+                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/display/hero"><h3><i class="fa-solid fa-chess-pawn"></i>Герои<sup class="featured-article__tag__count" th:text="${sumHero}"></sup></h3></a></span>
+                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/display/weapon"><h3>Предметы<sup class="featured-article__tag__count" ></sup>94</h3></a></span>
                             </ul>
                             <ul  class="nav justify-content-center">
                                 <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/display/ras"><h3>Расы<sup class="featured-article__tag__count">17</sup></h3></a></span>
-                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/display/class"><h3>Классы<sup class="featured-article__tag__count">17</sup></h3></a></span>
+                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/display/class"><h3>Классы<sup class="featured-article__tag__count" th:text="${sumClass}"></sup></h3></a></span>
                             </ul>
                             <ul  class="nav justify-content-center">
                                 <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/display/path"><h3>Патчи</h3></a></span>
