--- a/src/main/resources/templates/menu/button2/admin/hero/heroAdd.html
+++ b/src/main/resources/templates/menu/button2/admin/hero/heroAdd.html
@@ -30,34 +30,30 @@
                     <option value="ТИР 1">
                     <option value="ТИР 2">
                     <option value="ТИР 3">
+                    <option value="ТИР 4">
+                    <option value="ТИР 5">
                 </datalist>
 
 
-                <input type="text" name="classHero" list="datalistOptions" id="exampleDataList" placeholder="Ведите расу героя или класс" class="form-control"><br>
-                <datalist id="datalistOptions">
-                    <option value="ТИР 1">
-                    <option value="ТИР 2">
-                    <option value="ТИР 3">
+                <input type="text" name="classHero" list="datalistOptions1" id="exampleDataList" placeholder="Ведите расу героя или класс" class="form-control"><br>
+                <datalist id="datalistOptions1">
+                    <option th:each="class1 : ${ras}"> <t th:text="${class1.name}"></t></option>
                 </datalist>
 
 
 
-                <input th:each="${class : class}" type="text" name="classHero1" placeholder="Ведите класс героя" class="form-control"><br>
-                <datalist id="datalistOptions">
-                    <option th:value="class.name">
+                <input type="text" name="classHero1" list="datalistOptions2" placeholder="Ведите класс героя" class="form-control" id="exampleDataList"><br>
+                <datalist id="datalistOptions2">
+                    <option th:each="class1 : ${class}"> <t th:text="${class1.name}"></t></option>
                 </datalist>
 
-                <input type="text" name="classHero2" placeholder="Ведите класс героя" class="form-control"><br>
 
-                <p>вставте икону расы
-                <input type="file" name="iconClassHero">
-                </p>
-                <p>вставте икону класса
-                <input type="file" name="iconClassHero1">
-                </p>
-                <p>вставте икону класса
-                <input type="file" name="iconClassHero2" >
-                </p>
+                <input type="text" name="classHero2" list="datalistOptions3" placeholder="Ведите класс героя" class="form-control" id="exampleDataList"><br>
+                <datalist id="datalistOptions3">
+                    <option th:each="class1 : ${class}"> <t th:text="${class1.name}"></t></option>
+                </datalist>
+
+                
                 <textarea name="full_text" placeholder="Ведите полное описание героя" class="form-control"></textarea><br>
 
                 <button type="submit" class="btn btn-success">Добавить</button>
