--- a/src/main/resources/templates/menu/button2/admin/hero/heroDetals.html
+++ b/src/main/resources/templates/menu/button2/admin/hero/heroDetals.html
@@ -21,7 +21,7 @@
                     <table class="table table-borderless">
                         <thead>
                         <tr>
-                            <th colspan="3">Подробней о герои
+                            <th colspan="6">Подробней о герои
                             </th>
                         </tr>
                         </thead>
@@ -37,13 +37,13 @@
                             </td>
 
                             <td>
-                                <img th:src="'/images/hero/' + ${hero.iconClassHero}" height="20px" width="20px">
+                                <img th:src="'/images/ras/' + ${hero.iconClassHero}" height="20px" width="20px">
 
 
-                                <img th:src="'/images/hero/' + ${hero.iconClassHero1}" height="20px" width="20px">
+                                <img th:src="'/images/class/' + ${hero.iconClassHero1}" height="20px" width="20px">
 
 
-                                <img th:src="'/images/hero/' + ${hero.iconClassHero2}" alt="" height="20px" width="20px"
+                                <img th:src="'/images/class/' + ${hero.iconClassHero2}" alt="" height="20px" width="20px"
                                      onerror="this.style.visibility = 'hidden'"></td>
 
                             <td><t th:text="${hero.hero.full_text}"></t></td>
