--- a/src/main/resources/templates/menu/button2/user/hero/heroDisplay.html
+++ b/src/main/resources/templates/menu/button2/user/hero/heroDisplay.html
@@ -28,19 +28,19 @@
                         <tr th:each="hero1 : ${displayHeroTir1}">
 
 
-                            <td><img th:src="'/images/' + ${hero1.iconHero}"></td>
+                            <td><img th:src="'/images/hero/' + ${hero1.iconHero}"></td>
                             <td><a th:href="'/home/hero/' +${hero1.hero.id}" class="link-secondary">
                                 <t th:text="${hero1.hero.nameHero}"></t>
                             </a></td>
 
                             <td>
-                                <img th:src="'/images/' + ${hero1.iconClassHero}" height="20px" width="20px">
+                                <img th:src="'/images/ras/' + ${hero1.iconClassHero}" height="20px" width="20px">
 
 
-                                <img th:src="'/images/' + ${hero1.iconClassHero1}" height="20px" width="20px">
+                                <img th:src="'/images/class/' + ${hero1.iconClassHero1}" height="20px" width="20px">
 
 
-                                <img th:src="'/images/' + ${hero1.iconClassHero2}" alt="" height="20px" width="20px"
+                                <img th:src="'/images/class/' + ${hero1.iconClassHero2}" alt="" height="20px" width="20px"
                                      onerror="this.style.visibility = 'hidden'"></td>
 
                         </tr>
@@ -63,20 +63,20 @@
                         <tr th:each="hero1 : ${displayHeroTir2}">
 
 
-                            <td><img th:src="'/images/' + ${hero1.iconHero}"></td>
+                            <td><img th:src="'/images/hero/' + ${hero1.iconHero}"></td>
 
                             <td><a th:href="'/home/hero/' +${hero1.hero.id}" class="link-secondary">
                                 <t th:text="${hero1.hero.nameHero}"></t>
                             </a></td>
 
                             <td>
-                                <img th:src="'/images/' + ${hero1.iconClassHero}" height="20px" width="20px">
+                                <img th:src="'/images/ras/' + ${hero1.iconClassHero}" height="20px" width="20px">
 
 
-                                <img th:src="'/images/' + ${hero1.iconClassHero1}" height="20px" width="20px">
+                                <img th:src="'/images/class/' + ${hero1.iconClassHero1}" height="20px" width="20px">
 
 
-                                <img th:src="'/images/' + ${hero1.iconClassHero2}" alt="" height="20px" width="20px"
+                                <img th:src="'/images/class/' + ${hero1.iconClassHero2}" alt="" height="20px" width="20px"
                                      onerror="this.style.visibility = 'hidden'"></td>
 
                         </tr>
@@ -99,19 +99,19 @@
                         <tr th:each="hero1 : ${displayHeroTir3}">
 
 
-                            <td><img th:src="'/images/' + ${hero1.iconHero}"></td>
+                            <td><img th:src="'/images/hero/' + ${hero1.iconHero}"></td>
                             <td><a th:href="'/home/hero/' +${hero1.hero.id}" class="link-secondary">
                                 <t th:text="${hero1.hero.nameHero}"></t>
                             </a></td>
 
                             <td>
-                                <img th:src="'/images/' + ${hero1.iconClassHero}" height="20px" width="20px">
+                                <img th:src="'/images/ras/' + ${hero1.iconClassHero}" height="20px" width="20px">
 
 
-                                <img th:src="'/images/' + ${hero1.iconClassHero1}" height="20px" width="20px">
+                                <img th:src="'/images/class/' + ${hero1.iconClassHero1}" height="20px" width="20px">
 
 
-                                <img th:src="'/images/' + ${hero1.iconClassHero2}" alt="" height="20px" width="20px"
+                                <img th:src="'/images/class/' + ${hero1.iconClassHero2}" alt="" height="20px" width="20px"
                                      onerror="this.style.visibility = 'hidden'"></td>
 
                         </tr>
@@ -135,19 +135,19 @@
                         <tr th:each="hero1 : ${displayHeroTir4}">
 
 
-                            <td><img th:src="'/images/' + ${hero1.iconHero}"></td>
+                            <td><img th:src="'/images/hero/' + ${hero1.iconHero}"></td>
                             <td><a th:href="'/home/hero/' +${hero1.hero.id}" class="link-secondary">
                                 <t th:text="${hero1.hero.nameHero}"></t>
                             </a></td>
 
                             <td>
-                                <img th:src="'/images/' + ${hero1.iconClassHero}" height="20px" width="20px">
+                                <img th:src="'/images/ras/' + ${hero1.iconClassHero}" height="20px" width="20px">
 
 
-                                <img th:src="'/images/' + ${hero1.iconClassHero1}" height="20px" width="20px">
+                                <img th:src="'/images/class' + ${hero1.iconClassHero1}" height="20px" width="20px">
 
 
-                                <img th:src="'/images/' + ${hero1.iconClassHero2}" alt="" height="20px" width="20px"
+                                <img th:src="'/images/class' + ${hero1.iconClassHero2}" alt="" height="20px" width="20px"
                                      onerror="this.style.visibility = 'hidden'"></td>
 
                         </tr>
@@ -169,19 +169,19 @@
                         <tr th:each="hero1 : ${displayHeroTir5}">
 
 
-                            <td><img th:src="'/images/' + ${hero1.iconHero}"></td>
+                            <td><img th:src="'/images/hero/' + ${hero1.iconHero}"></td>
                             <td><a th:href="'/home/hero/' +${hero1.hero.id}" class="link-secondary">
                                 <t th:text="${hero1.hero.nameHero}"></t>
                             </a></td>
 
                             <td>
-                                <img th:src="'/images/' + ${hero1.iconClassHero}" height="20px" width="20px">
+                                <img th:src="'/images/ras/' + ${hero1.iconClassHero}" height="20px" width="20px">
 
 
-                                <img th:src="'/images/' + ${hero1.iconClassHero1}" height="20px" width="20px">
+                                <img th:src="'/images/class/' + ${hero1.iconClassHero1}" height="20px" width="20px">
 
 
-                                <img th:src="'/images/' + ${hero1.iconClassHero2}" alt="" height="20px" width="20px"
+                                <img th:src="'/images/class/' + ${hero1.iconClassHero2}" alt="" height="20px" width="20px"
                                      onerror="this.style.visibility = 'hidden'"></td>
 
                         </tr>
