добавил расы, исправил некоторые баги с класами и героями

--- a/src/main/resources/templates/menu/button1/autoChessAdmin.html
+++ b/src/main/resources/templates/menu/button1/autoChessAdmin.html
@@ -24,7 +24,7 @@
                                 <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/admin/display/items"><h3>Предметы<sup class="featured-article__tag__count">94</sup></h3></a></span>
                             </ul>
                             <ul  class="nav justify-content-center">
-                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/admin/display/rasa"><h3>Расы<sup class="featured-article__tag__count">17</sup></h3></a></span>
+                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/admin/display/ras"><h3>Расы<sup class="featured-article__tag__count">17</sup></h3></a></span>
                                 <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/admin/display/class"><h3>Классы<sup class="featured-article__tag__count">17</sup></h3></a></span>
                                 <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/admin/display/skill"><h3>Абилка<sup class="featured-article__tag__count">17</sup></h3></a></span>
                             </ul>
