--- a/src/main/resources/templates/menu/button2/admin/classHero/classDetals.html
+++ b/src/main/resources/templates/menu/button2/admin/classHero/classDetals.html
@@ -28,7 +28,7 @@
 
             <tbody>
             <tr th:each="classHero : ${id}">
-              <form th:action="@{'/admin/edit/class/' + ${classHero.id}} " method="post" enctype="multipart/form-data">
+
 
               <td><img th:src="'/images/class/' + ${classHero.id}"></td>
 
@@ -38,7 +38,7 @@
 
               <td>
                 <t th:text="${classHero.detals}"></t></td>
-                <td><button type="submit" >Изменить</button><br>
+                <td><a th:href="'/admin/edit/class/' + ${classHero.id}">Изменит</a>
                   <a th:href="@{'/admin/delete/class/' + ${classHero.id}}" >Удалить</a></td>
 
               </form>
