--- a/src/main/resources/templates/menu/button2/user/hero/heroDetals.html
+++ b/src/main/resources/templates/menu/button2/user/hero/heroDetals.html
@@ -33,13 +33,13 @@
                             </td>
 
                             <td>
-                                <img th:src="'/images/hero/' + ${hero.iconClassHero}" height="20px" width="20px">
+                                <img th:src="'/images/ras/' + ${hero.iconClassHero}" height="20px" width="20px">
 
 
-                                <img th:src="'/images/hero/' + ${hero.iconClassHero1}" height="20px" width="20px">
+                                <img th:src="'/images/class/' + ${hero.iconClassHero1}" height="20px" width="20px">
 
 
-                                <img th:src="'/images/hero/' + ${hero.iconClassHero2}" alt="" height="20px" width="20px"
+                                <img th:src="'/images/class/' + ${hero.iconClassHero2}" alt="" height="20px" width="20px"
                                      onerror="this.style.visibility = 'hidden'"></td>
 
                             <td><t th:text="${hero.hero.full_text}"></t></td>
