--- a/src/main/resources/templates/menu/button2/admin/hero/heroDisplay.html
+++ b/src/main/resources/templates/menu/button2/admin/hero/heroDisplay.html
@@ -22,7 +22,7 @@
                     <table class="table table-borderless" style="width:19%;table-layout:fixed">
                         <thead>
                         <tr>
-                            <th colspan="5" style="width:20%">1$Фигуры
+                            <th colspan="5" style="width:19%">1$Фигуры
                             </th>
                         </tr>
                         </thead>
@@ -39,13 +39,12 @@
                                 <t th:text="${hero1.hero.nameHero}"></t>
                             </a><a th:href="'/admin/delete/hero/' + ${hero1.hero.id}">Удалить</a></td>
 
-                            <th><img th:src="'/images/ras/' + ${hero1.iconClassHero}" height="20px" width="20px"></th>
+                            <th><img th:if="${hero1.iconClassHero}" th:src="'/images/ras/' + ${hero1.iconClassHero}" height="20px" width="20px"></th>
 
-                            <th><img th:src="'/images/class/' + ${hero1.iconClassHero1}" height="20px" width="20px">
+                            <th><img th:if="${hero1.iconClassHero1}" th:src="'/images/class/' + ${hero1.iconClassHero1}" height="20px" width="20px">
 
                             </th>
-                            <th><img th:src="'/images/class/' + ${hero1.iconClassHero2}" alt="" height="20px"
-                                     width="20px" onerror="this.style.visibility = 'hidden'">
+                            <th><img th:if="${hero1.iconClassHero2}" th:src="'/images/class/' + ${hero1.iconClassHero2}" alt="" height="20px">
 
                             </th>
                         </tr>
@@ -63,7 +62,7 @@
                         <table class="table table-borderless" style="width:19%;table-layout:fixed">
                             <thead>
                             <tr>
-                                <th colspan="5" style="width:20%">2$Фигуры
+                                <th colspan="5" style="width:19%">2$Фигуры
                                 </th>
                             </tr>
                             </thead>
@@ -72,7 +71,7 @@
 
 
                             <tr>
-                                <td><img th:src="'/images/hero/' + ${hero1.iconHero}">
+                                <td><img th:if="${hero1.iconHero}" th:src="'/images/hero/' + ${hero1.iconHero}">
                                     <a th:href="'/admin/edit/hero/' +${hero1.hero.id}">
                                         Изменить</a></td>
 
@@ -80,13 +79,13 @@
                                     <t th:text="${hero1.hero.nameHero}"></t>
                                 </a><a th:href="'/admin/delete/hero/' + ${hero1.hero.id}">Удалить</a></td>
 
-                                <th><img th:src="'/images/ras/' + ${hero1.iconClassHero}" height="20px" width="20px"></th>
+                                <th><img th:if="${hero1.iconClassHero}"  th:src="'/images/ras/' + ${hero1.iconClassHero}" height="20px" width="20px"></th>
 
-                                <th><img th:src="'/images/class/' + ${hero1.iconClassHero1}" height="20px" width="20px">
+                                <th><img th:if="${hero1.iconClassHero1}" th:src="'/images/class/' + ${hero1.iconClassHero1}" height="20px" width="20px">
 
                                 </th>
-                                <th><img th:src="'/images/class/' + ${hero1.iconClassHero2}" alt="" height="20px"
-                                         width="20px" onerror="this.style.visibility = 'hidden'">
+                                <th><img th:if="${hero1.iconClassHero2}" th:src="'/images/class/' + ${hero1.iconClassHero2}" alt="" height="20px">
+
 
                                 </th>
                             </tr>
@@ -104,7 +103,7 @@
                             <table class="table table-borderless" style="width:19%;table-layout:fixed">
                                 <thead>
                                 <tr>
-                                    <th colspan="5" style="width:20%">3$Фигуры
+                                    <th colspan="5" style="width:19%">3$Фигуры
                                     </th>
                                 </tr>
                                 </thead>
@@ -113,7 +112,7 @@
 
 
                                 <tr>
-                                    <td><img th:src="'/images/hero/' + ${hero1.iconHero}">
+                                    <td><img th:if="${hero1.iconHero}" th:src="'/images/hero/' + ${hero1.iconHero}">
                                         <a th:href="'/admin/edit/hero/' +${hero1.hero.id}">
                                             Изменить</a></td>
 
@@ -121,13 +120,12 @@
                                         <t th:text="${hero1.hero.nameHero}"></t>
                                     </a><a th:href="'/admin/delete/hero/' + ${hero1.hero.id}">Удалить</a></td>
 
-                                    <th><img th:src="'/images/ras/' + ${hero1.iconClassHero}" height="20px" width="20px"></th>
+                                    <th><img th:if="${hero1.iconClassHero}"  th:src="'/images/ras/' + ${hero1.iconClassHero}" height="20px" width="20px"></th>
 
-                                    <th><img th:src="'/images/class/' + ${hero1.iconClassHero1}" height="20px" width="20px">
+                                    <th><img th:if="${hero1.iconClassHero1}" th:src="'/images/class/' + ${hero1.iconClassHero1}" height="20px" width="20px">
 
                                     </th>
-                                    <th><img th:src="'/images/class/' + ${hero1.iconClassHero2}" alt="" height="20px"
-                                             width="20px" onerror="this.style.visibility = 'hidden'">
+                                    <th><img th:if="${hero1.iconClassHero2}" th:src="'/images/class/' + ${hero1.iconClassHero2}"  height="20px" width="20px">
 
                                     </th>
                                 </tr>
@@ -145,7 +143,7 @@
                                 <table class="table table-borderless" style="width:19%;table-layout:fixed">
                                     <thead>
                                     <tr>
-                                        <th colspan="5" style="width:20%">4$Фигуры
+                                        <th colspan="5" style="width:19%">4$Фигуры
                                         </th>
                                     </tr>
                                     </thead>
@@ -154,7 +152,7 @@
 
 
                                     <tr>
-                                        <td><img th:src="'/images/hero/' + ${hero1.iconHero}">
+                                        <td><img th:if="${hero1.iconHero}" th:src="'/images/hero/' + ${hero1.iconHero}">
                                             <a th:href="'/admin/edit/hero/' +${hero1.hero.id}">
                                                 Изменить</a></td>
 
@@ -162,13 +160,12 @@
                                             <t th:text="${hero1.hero.nameHero}"></t>
                                         </a><a th:href="'/admin/delete/hero/' + ${hero1.hero.id}">Удалить</a></td>
 
-                                        <th><img th:src="'/images/ras/' + ${hero1.iconClassHero}" height="20px" width="20px"></th>
+                                        <th><img th:if="${hero1.iconClassHero}" th:src="'/images/ras/' + ${hero1.iconClassHero}" height="20px" width="20px"></th>
 
-                                        <th><img th:src="'/images/class/' + ${hero1.iconClassHero1}" height="20px" width="20px">
+                                        <th><img th:if="${hero1.iconClassHero1}" th:src="'/images/class/' + ${hero1.iconClassHero1}" height="20px" width="20px">
 
                                         </th>
-                                        <th><img th:src="'/images/class/' + ${hero1.iconClassHero2}" alt="" height="20px"
-                                                 width="20px" onerror="this.style.visibility = 'hidden'">
+                                        <th><img th:if="${hero1.iconClassHero2}" th:src="'/images/class/' + ${hero1.iconClassHero2}" alt="" height="20px" width="20px">
 
                                         </th>
                                     </tr>
@@ -186,7 +183,7 @@
                                     <table class="table table-borderless" style="width:19%;table-layout:fixed">
                                         <thead>
                                         <tr>
-                                            <th colspan="5" style="width:20%">5$Фигуры
+                                            <th colspan="5" style="width:19%">5$Фигуры
                                             </th>
                                         </tr>
                                         </thead>
@@ -195,7 +192,7 @@
 
 
                                         <tr>
-                                            <td><img th:src="'/images/hero/' + ${hero1.iconHero}">
+                                            <td><img th:if="${hero1.iconHero}" th:src="'/images/hero/' + ${hero1.iconHero}">
                                                 <a th:href="'/admin/edit/hero/' +${hero1.hero.id}">
                                                     Изменить</a></td>
 
@@ -203,13 +200,12 @@
                                                 <t th:text="${hero1.hero.nameHero}"></t>
                                             </a><a th:href="'/admin/delete/hero/' + ${hero1.hero.id}">Удалить</a></td>
 
-                                            <th><img th:src="'/images/ras/' + ${hero1.iconClassHero}" height="20px" width="20px"></th>
+                                            <th><img th:if="${hero1.iconClassHero}" th:src="'/images/ras/' + ${hero1.iconClassHero}" height="20px" width="20px"></th>
 
-                                            <th><img th:src="'/images/class/' + ${hero1.iconClassHero1}" height="20px" width="20px">
+                                            <th><img th:if="${hero1.iconClassHero1}" th:src="'/images/class/' + ${hero1.iconClassHero1}" height="20px" width="20px">
 
                                             </th>
-                                            <th><img th:src="'/images/class/' + ${hero1.iconClassHero2}" alt="" height="20px"
-                                                     width="20px" onerror="this.style.visibility = 'hidden'">
+                                            <th><img th:if="${hero1.iconClassHero2}" th:src="'/images/class/' + ${hero1.iconClassHero2}" height="20px" width="20px">
 
                                             </th>
                                         </tr>
@@ -227,7 +223,7 @@
                                         <table class="table table-borderless" style="width:19%;table-layout:fixed">
                                             <thead>
                                             <tr>
-                                                <th colspan="5" style="width:20%">Измените тир
+                                                <th colspan="5" style="width:19%">Измените тир
                                                 </th>
                                             </tr>
                                             </thead>
@@ -236,7 +232,7 @@
 
 
                                             <tr>
-                                                <td><img th:src="'/images/hero/' + ${hero1.iconHero}">
+                                                <td><img th:if="${hero1.iconHero}" th:src="'/images/hero/' + ${hero1.iconHero}">
                                                     <a th:href="'/admin/edit/hero/' +${hero1.hero.id}">
                                                         Изменить</a></td>
 
@@ -244,13 +240,12 @@
                                                     <t th:text="${hero1.hero.nameHero}"></t>
                                                 </a><a th:href="'/admin/delete/hero/' + ${hero1.hero.id}">Удалить</a></td>
 
-                                                <th><img th:src="'/images/ras/' + ${hero1.iconClassHero}" height="20px" width="20px"></th>
+                                                <th><img th:if="${hero1.iconClassHero}"  th:src="'/images/ras/' + ${hero1.iconClassHero}" height="20px" width="20px"></th>
 
-                                                <th><img th:src="'/images/class/' + ${hero1.iconClassHero1}" height="20px" width="20px">
+                                                <th><img th:if="${hero1.iconClassHero1}" th:src="'/images/class/' + ${hero1.iconClassHero1}" height="20px" width="20px">
 
                                                 </th>
-                                                <th><img th:src="'/images/class/' + ${hero1.iconClassHero2}" alt="" height="20px"
-                                                         width="20px" onerror="this.style.visibility = 'hidden'">
+                                                <th><img th:if="${hero1.iconClassHero2}" th:src="'/images/class/' + ${hero1.iconClassHero2}" alt="" height="20px" width="20px">
 
                                                 </th>
                                             </tr>
@@ -262,11 +257,14 @@
 
                                     </div>
 
+            </div>
+        </main>
     <footer th:insert="blocks/headerFooter/footer :: footer"></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"></script>
-</div>
 
+    </div>
+</div>
 </body>
 </html>
