--- a/src/main/resources/templates/menu/button2/user/hero/heroDisplay.html
+++ b/src/main/resources/templates/menu/button2/user/hero/heroDisplay.html
@@ -29,7 +29,7 @@
 
 
                             <td><img th:src="'/images/hero/' + ${hero1.iconHero}"></td>
-                            <td><a th:href="'/home/hero/' +${hero1.hero.id}" class="link-secondary">
+                            <td><a th:href="'/home/display/hero/' +${hero1.hero.id}" class="link-secondary">
                                 <t th:text="${hero1.hero.nameHero}"></t>
                             </a></td>
 
@@ -65,7 +65,7 @@
 
                             <td><img th:src="'/images/hero/' + ${hero1.iconHero}"></td>
 
-                            <td><a th:href="'/home/hero/' +${hero1.hero.id}" class="link-secondary">
+                            <td><a th:href="'/home/display/hero/' +${hero1.hero.id}" class="link-secondary">
                                 <t th:text="${hero1.hero.nameHero}"></t>
                             </a></td>
 
@@ -100,7 +100,7 @@
 
 
                             <td><img th:src="'/images/hero/' + ${hero1.iconHero}"></td>
-                            <td><a th:href="'/home/hero/' +${hero1.hero.id}" class="link-secondary">
+                            <td><a th:href="'/home/display/hero/' +${hero1.hero.id}" class="link-secondary">
                                 <t th:text="${hero1.hero.nameHero}"></t>
                             </a></td>
 
@@ -136,7 +136,7 @@
 
 
                             <td><img th:src="'/images/hero/' + ${hero1.iconHero}"></td>
-                            <td><a th:href="'/home/hero/' +${hero1.hero.id}" class="link-secondary">
+                            <td><a th:href="'/home/display/hero/' +${hero1.hero.id}" class="link-secondary">
                                 <t th:text="${hero1.hero.nameHero}"></t>
                             </a></td>
 
@@ -170,7 +170,7 @@
 
 
                             <td><img th:src="'/images/hero/' + ${hero1.iconHero}"></td>
-                            <td><a th:href="'/home/hero/' +${hero1.hero.id}" class="link-secondary">
+                            <td><a th:href="'/home/display/hero/' +${hero1.hero.id}" class="link-secondary">
                                 <t th:text="${hero1.hero.nameHero}"></t>
                             </a></td>
 
